# ropecoin

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  canister_ids.json  dfx.json  init_args.did  package-lock.json  package.json  vercel.json
.github/workflows/: deploy.yml
scripts/: build.sh  deploy_local.sh  deploy_prod.sh  deploy_staging.sh  test_archieve_and_index.sh
src/backend/src/blackhole/: Cargo.toml  blackhole.did  lib.rs
src/backend/src/fee_collector/: Cargo.toml  env.rs  fee_collector.did  lib.rs
src/backend/src/fee_collector/api/: api_clients.rs  mod.rs
src/backend/src/fee_collector/storage/: storages.rs
src/backend/src/ropecoin/: Cargo.toml  constants.rs  env.rs  lib.rs  ropecoin.did
src/backend/src/ropecoin/api/: api_clients.rs  icp_ledger_api.rs  mod.rs  ropecoin_ledger_api.rs
src/backend/src/ropecoin/logic/: deposits.rs  words.rs
src/backend/src/ropecoin/methods/: deposits.rs  icrc21.rs  mod.rs  words.rs
src/backend/src/ropecoin/misc/: ic_utils.rs  utils.rs
src/backend/src/ropecoin/storage/: storages.rs
src/backend/src/ropecoin/tests/: deposits_tests.rs  words_test.rs
src/backend/src/ropecoin/types/: deposits.rs  mod.rs  words.rs
src/backend/src/test_helper/: Cargo.toml  context.rs
src/declarations/: icpLedger.ts
src/declarations/blackhole/: blackhole.did.d.ts  blackhole.did.js  index.js
src/declarations/ropecoin/: index.d.ts  index.js  ropecoin.did  ropecoin.did.d.ts  ropecoin.did.js
src/declarations/ropecoin_archive_canister/: index.d.ts  index.js
src/declarations/ropecoin_index_canister/: index.d.ts  index.js
src/declarations/ropecoin_ledger_canister/: index.d.ts  index.js  ropecoin_ledger_canister.did.d.ts  ropecoin_ledger_canister.did.js
src/frontend/: .env.example  .env.production  .env.staging  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/frontend/public/: index.css  index.js
src/frontend/src/: App.tsx  constants.ts  main.tsx  utils.ts
src/frontend/src/components/: About.tsx  Connect.tsx  Donate.tsx  Examples.tsx  GetRope.tsx  Header.tsx  PreSaleStats.tsx  Socials.tsx
src/frontend/src/components/Hangman/: Figure.tsx  Hangman.css  Hangman.tsx  Notification.tsx  PlayButton.tsx  PopUp.tsx  Word.tsx  WrongLetters.tsx
src/frontend/src/context/: AppReducer.tsx  GlobalState.tsx  WalletContext.tsx
src/frontend/src/helpers/: index.ts
src/frontend/src/hooks/: getRandomWord.tsx  handleKeyDown.tsx  useCanister.ts
src/frontend/src/types/: global.d.ts
