[workspace]
members = [
    "src/backend/src/ropecoin",
    "src/backend/src/test_helper",
    "src/backend/src/blackhole",
    "src/backend/src/fee_collector",
]
resolver = "2"

[workspace.dependencies]
candid = "^0.10.14"
ic-cdk = "^0.18.0"
ic-stable-structures = "^0.6.8"
ic-ledger-types = "0.3.0"
icrc-ledger-types = "^0.1.10"
serde = { version = "^1.0", features = ["derive"] }
ic-management-canister-types = "^0.3.1"
pocket-ic = "^9.0.2"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
serde_json = "^1.0"
ic-cdk-timers = "^0.12.0"
test_helper = { path = "src/backend/src/test_helper" }
