[package]
name = "blackhole"
description = "Blackhole canister that is set to minting account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
path="lib.rs"

[dependencies]
ic-cdk = {workspace = true}
candid = {workspace = true}
serde = {workspace = true}