[package]
name = "ropecoin"
description = "Ropecoin is a decentralized cryptocurrency built on the Internet Computer Protocol."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
path="lib.rs"

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
ic-stable-structures = {workspace = true}
icrc-ledger-types = {workspace = true}
serde = {workspace = true}
serde_bytes = {workspace = true}
serde_json = {workspace = true}
serde_cbor = {workspace = true}
ic-cdk-timers = {workspace = true}

[dev-dependencies]
pocket-ic = {workspace = true}
test_helper = {workspace = true}